LAB2/app-payments/service.yaml
# LAB 2.3 - Service cho payments-api
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  namespace: payments
  labels:
    app: payments-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: payments-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
